--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: https://mahnoorzah.github.io
 # on GitHub Pages it is your github repository's name prefixed with a /
 baseurl: /testing2 
 # location of code, the full url to your github repository
-source-code: https://github.com/mahnoorzah/testing2/
+source-code: https://github.com/mahnoorzah/testing2
 
 ##########
 # SITE SETTINGS
